[gd_scene load_steps=14 format=2]

[ext_resource path="res://textures/bowl.png" type="Texture" id=1]
[ext_resource path="res://scripts/bowl.gd" type="Script" id=2]
[ext_resource path="res://textures/ingredients.png" type="Texture" id=3]
[ext_resource path="res://resources/bigfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://textures/patience.png" type="Texture" id=6]
[ext_resource path="res://sounds/receipt.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/cash.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/female_thanks.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/female_sigh.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/male_thanks.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/male_sigh.wav" type="AudioStream" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[node name="bowl" type="Node2D"]
script = ExtResource( 2 )

[node name="item_template" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 3 )
hframes = 4
vframes = 4

[node name="required" type="Node2D" parent="."]
position = Vector2( 68, -155 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="buttonContainer" type="Node2D" parent="."]
position = Vector2( 527, 111 )
scale = Vector2( 0.5, 0.5 )

[node name="Button" type="Button" parent="buttonContainer"]
margin_left = 2.0
margin_top = -40.0
margin_right = 496.0
margin_bottom = 219.0
custom_colors/font_color_focus = Color( 0.870588, 0, 1, 1 )
custom_colors/font_color = Color( 0.721569, 0.729412, 0.521569, 1 )
custom_colors/font_color_hover = Color( 0.870588, 0, 1, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 3 )
text = "Receipt"
flat = true

[node name="patience" type="Sprite" parent="."]
position = Vector2( -355, -13 )
texture = ExtResource( 6 )
hframes = 8
vframes = 4

[node name="receipt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="cash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -16.0

[node name="male_thanks" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="male_sigh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -8.0

[node name="female_thanks" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="female_sigh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0
